--- a/package.json
+++ b/package.json
@@ -1,50 +1,37 @@
 {
-  "name": "modernize-tailwind",
-  "version": "1.0.0",
-  "description": "modernize-tailwind",
-  "main": "index.js",
+  "name": "admin-front",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "gulp",
-    "build": "gulp build",
-    "deploy": "npm run build && gh-pages -d dist"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@preline/dropdown": "^1.3.0",
-    "@preline/input-number": "^2.0.1",
-    "@preline/overlay": "^1.4.0",
-    "@preline/tooltip": "^2.0.1",
-    "apexcharts": "^3.45.1",
-    "dropzone": "^6.0.0-beta.2",
-    "iconify-icon": "^1.0.8",
-    "jquery": "^3.7.0",
-    "preline": "^1.9.0",
-    "prismjs": "^1.29.0",
-    "simplebar": "^6.2.5",
-    "tailwindcss": "^3.3.3"
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "apexcharts": "^4.0.0",
+    "react-apexcharts": "^1.4.1",
+    "lucide-react": "^0.294.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.16",
-    "browser-sync": "^2.29.3",
-    "cssnano": "^6.0.1",
-    "del": "^6.1.1",
-    "gh-pages": "^6.3.0",
-    "gulp": "4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-cached": "1.1.1",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-file-include": "2.3.0",
-    "gulp-if": "3.0.0",
-    "gulp-npm-dist": "1.0.4",
-    "gulp-postcss": "^9.0.1",
-    "gulp-replace": "1.1.4",
-    "gulp-terser": "^2.1.0",
-    "gulp-useref": "5.0.0",
-    "postcss": "^8.4.31"
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4"
   }
 }
