--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@tanstack/react-query": "^5.82.0",
     "apexcharts": "^4.0.0",
     "clsx": "^2.0.0",
